[gd_scene load_steps=2 format=3 uid="uid://dx12e1aq1oxmq"]

[ext_resource type="Script" uid="uid://eldg3gh5t3ik" path="res://addons/gnet/examples/SimpleP2P/player_list.gd" id="1_4avku"]

[node name="PlayerList" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4avku")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 235.0
offset_bottom = 152.0

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2

[node name="PlayersContainer" type="VBoxContainer" parent="VBox"]
layout_mode = 2
